--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,40 @@ path = "src/jaxert/version.py"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/jaxert"]
+
+
+[tool.hatch.envs.test]
+dependencies = [
+  "coverage[toml]",
+]
+
+[tool.hatch.envs.test.scripts]
+run = "coverage run -m unittest discover tests"
+
+[[tool.hatch.envs.test.matrix]]
+python = ["3.10", "3.11", "3.12"]
+
+
+[tool.hatch.envs.cov]
+dependencies = [
+  "coverage[toml]",
+]
+
+[tool.hatch.envs.cov.scripts]
+erase = "coverage erase"
+combine = "coverage combine"
+report = "coverage report"
+
+
+[tool.coverage.run]
+branch = true
+parallel = true
+relative_files = true
+omit = ["tests/test_*.py"]
+source = ["jaxert"]
+
+[tool.coverage.paths]
+source = [
+  "src/jaxert",
+  "*/site-packages/jaxert",
+]
