--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
       - uses: pypa/hatch@install
+      - runs: hatch build
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           verbose: true
