--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Publish
 
 on:
   push:
+    tags:
+      - 'v*'
 
 
 jobs:
@@ -10,7 +12,6 @@ jobs:
     environment: release
     permissions:
       id-token: write
-    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
