Fix: Ignore submodule

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ path = "src/jaxert/version.py"
 [tool.hatch.build.targets.sdist]
 exclude = [
   ".github",
+  ".gitmodules",
+  "dev-py",
   "tests",
 ]
 
