--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
       - uses: pypa/hatch@install
       - run: hatch build
       - uses: pypa/gh-action-pypi-publish@release/v1
