--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ dependencies = [
 requires-python = ">= 3.8"
 readme = "README.md"
 license = {text = "MIT License"}
+classifiers = [
+  "Topic :: Software Development :: Testing",
+]
+
+[project.urls]
+"Source Code" = "https://github.com/ymd-h/jaxert"
 
 
 [tool.hatch.version]
